ES-145: ensure language switcher is lowercase and chevron is vertically aligned

--- a/sass/cd/_cd-resets.scss
+++ b/sass/cd/_cd-resets.scss
@@ -26,6 +26,8 @@
     border-radius: 0;
     box-shadow: none;
     font-family: $cd-font;
+    @include font-size($cd-font-size-tiny);
+    font-weight: 300;
   }
 }
 
