--- a/sass/cd/cd-header/_cd-user-menu.scss
+++ b/sass/cd/cd-header/_cd-user-menu.scss
@@ -83,9 +83,9 @@ button.cd-user-menu__item {
 
   .icon-arrow-down {
     position: absolute;
-    margin-top: -6px;
     right: 12px;
     top: 50%;
+    transform: translateY(-50%);
   }
 }
 
@@ -208,7 +208,7 @@ button.cd-user-menu__item {
 // Language switcher button
 #cd-lang-toggle {
   .cd-user-menu__label {
-    text-transform: uppercase;
+    text-transform: lowercase;
   }
 }
 #cd-lang-dropdown {
